# LightningSparseInst

./: .pre-commit-config.yaml  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/hydra/: default.yaml
conf/nn/: default.yaml
conf/nn/data/: default.yaml
conf/nn/data/dataset/: cityscapes.yaml  coco.yaml  default.yaml
conf/nn/data/dataset/vision/: mnist.yaml
conf/nn/module/: default.yaml
conf/nn/module/model/: cnn.yaml
conf/train/: default.yaml
docs/: index.md
src/lightningsparseinst/: __init__.py  run.py
src/lightningsparseinst/data/: __init__.py  datamodule.py  dataset.py
src/lightningsparseinst/modules/: module.py
src/lightningsparseinst/pl_modules/: pl_module.py
src/lightningsparseinst/ui/: run.py
src/lightningsparseinst/utils/: fiftyone_io.py  hf_io.py  transforms.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py  test_seeding.py
