[tool.pytest.ini_options]
minversion = "6.2"
addopts = "-ra"
testpaths = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "pragma: nocover",
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 120
include = '\.pyi?$'

[tool.mypy]
files= ["src/**/*.py", "test/*.py"]
ignore_missing_imports = true

[tool.isort]
profile = 'black'
line_length = 120
known_third_party = ["numpy", "pytest", "wandb", "torch"]
known_first_party = ["nn_core"]
known_local_folder = "lightningsparseinst"

[tool.pydocstyle]
convention = 'google'
# ignore all missing docs errors
add-ignore = ['D100', 'D101', 'D102', 'D103', 'D104', 'D105', 'D106', 'D107']

[tool.bandit]
skips = ["B101"]

[tool.poetry]
name = "lightningsparseinst"
version = "0.1.0"
description = "SparseInst (CVPR 2022) in PyTorch Lightning"
authors = ["Charitarth Chugh <charitarth.chughg@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
torch = "^2.5.0"
nn-template-core = {git = "https://github.com/charitarthchugh/nn-template-core"} # use fork of nn-template-core to allow for newer versions of lightning
lightning = "^2.4.0"
hydra-core = "^1.3.2"
wandb = "^0.18.5"
torchmetrics = "^1.5.1"
omegaconf = "^2.3.0"
fiftyone = "^1.0.1"
albumentations = "^1.4.21"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.4"
isort = "^5.13.2"
tqdm = "^4.66.5"
cruft = "^2.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
